add available currencies endpoint
